[package]
name = "callback_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }